# viru-tracker

./: .gitignore  AGENTS.md  COLOR_PALETTE_AUDIT.md  DESIGN.md  POLICIES_PAGE_ACCEPTANCE_CHECKLIST.md  POLICIES_PAGE_COPY_DECK_ES.md  README.md  UI_CHANGES.md  VIRU_PANEL.bat  fase0.md  fase1.md  fase2.md  fase3.md  footer-block.md  iniciar_viru.ps1  mcp.json  prompt.txt  skills-lock.json  users_prueba.example.txt  users_prueba.txt
backend/: .env.example  AGENTS.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_is_admin.py  0003_add_user_notes.py  0004_account_system_redesign.py  0005_add_idempotency_records.py  0006_schema_catchup_core_tables.py  0007_postgres_operational_indexes.py  0008_watchlist_uniqueness_guard.py  0009_add_ux_events_table.py  0010_add_client_error_event_table.py  0011_add_search_preference_defaults.py  0012_add_alert_rule_min_change_pct.py  0013_add_auth_tokens.py  0014_notification_pipeline_fields.py  0015_alerts_quiet_hours_digest.py  0016_remove_is_paused.py
backend/app/: main.py
backend/data/: airports_master.json  airports_master.report.json
backend/docs/: quick-search-acceptance-checklist.md  quick-search-contract.md
backend/scripts/: benchmark_prices_batch_vs_nplus1.py  check_watchlist_duplicates.py  db_retention.py  generate_ryanair_airports_master.py  migrate_sqlite_to_postgres.py  seed_airports.py  seed_testsprite_data.py  smoke_watchlist_release.py
backend/tests/: conftest.py  helpers.py
backend/viru_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1036 files in other folders)
