[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viru-backend"
version = "0.1.0"
description = "Backend base de Viru"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "pydantic[email]>=2.10.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.20",
  "requests>=2.32.3",
  "psycopg[binary]>=3.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.28.0",
  "ruff>=0.8.2",
  "mypy>=1.13.0",
  "types-requests>=2.32.0.20250328",
  "types-passlib>=1.7.7.20250602"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["jose", "jose.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*", "passlib", "passlib.*"]
ignore_missing_imports = true

[tool.setuptools]
packages = ["app"]
